[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/MotionTrail/MotionTrail.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/tank2Shell.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.5
bottom_radius = 0.2
height = 1.0
radial_segments = 6
rings = 2

[node name="tank2Shell" type="KinematicBody"]
collision_layer = 4
script = ExtResource( 2 )
speed = 200
damage = 50

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MotionTrail" parent="." instance=ExtResource( 1 )]
cast_shadow = 0
width = 0.25
motionDelta = 50.0
startColor = Color( 1, 0, 0, 0.631373 )
endColor = Color( 1, 0, 0, 0 )

[node name="lifeTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="endEmitTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true
[connection signal="timeout" from="lifeTimer" to="." method="_on_lifeTimer_timeout"]
[connection signal="timeout" from="endEmitTimer" to="." method="_on_endEmitTimer_timeout"]
